fix: trying to fix the responsive on mobile

--- a/styles/design-system.css
+++ b/styles/design-system.css
@@ -91,6 +91,7 @@ body {
   color: var(--on-surface);
   background-color: var(--background);
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
   overflow: hidden;
   display: flex;
